fixOverflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
 html {
-    height: 700px;
-    width: auto;
+    height: 850px;
+    width: 1440px;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 body {
-    height: 700px;
-    width: auto;
-    margin-bottom: 2%;
+    height: 800px;
+    width: 1440px;
+    max-width: 100%;
+    overflow-x: hidden;
+    margin-bottom: 3%;
+    margin-left: auto;
+    margin-right: auto;
     background-image: url("images/background.jpeg");
+    background-size: cover;
     font-family: 'Open Sans', 'Times New Roman', Times, serif;
 }
 
@@ -39,26 +46,27 @@ body {
 } 
 
 #root {
-    height: max-content;
-    width: 100%;
+    height: 850px;
+    width: 1440px;
     position: absolute;
     z-index: 1;
 }
 
 .loader-container {
-    height: 800px;
-    width: 100%;
+    height: 900px;
+    width: 1440px;
     background-color: antiquewhite;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 2;
     position: absolute;
+    margin-top: -1%;
 } 
 
 #endAnim{
-    height: 800px;
-    width: 100%;
+    height: 900px;
+    width: 1440px;
     background-color: antiquewhite;
     display: flex;
     justify-content: center;
